syntax = "proto3";

package post;
import "common.proto";

service PostService {
    rpc CreatePost(CreatePostRequest) returns (common.Post);
    rpc GetPostsByAuthorId(GetPostsWithAuthorIdRequest) returns (GetPostsWithAuthorIdResponse);
}

message CategoryId {
    int32 id = 1;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    repeated CategoryId categories = 3;
}

message GetPostsWithAuthorIdRequest {
    int32 authorId = 1;
}

message GetPostsWithAuthorIdResponse {
    repeated common.Post posts = 1;
}